--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</div>
 
 			<div class="alt">
-				<img src="images/Kanye.jpg" >
+				<img src="images/kanyew.jpg" >
 				<h3> 808s and Heartbreaks <span> Kanye West</span> </h3>
 				<h4> $38.98</h4>
 				<a href="#"> <i class="fas fa-cart-plus"></i> </a>
