--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			<div class="pop">
 				<img src="images/dualipa.jpg" >
-				<h3> Future Nostalgia Limited <span> Dua Lipa </span> </h3>
+				<h3> Future Nostalgia <span> Dua Lipa </span> </h3>
 				<h4> $24.98</h4>
 				<a href="#"> <i class="fas fa-cart-plus"></i> </a>
 			</div>
