--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://kit.fontawesome.com/4b567f9bd6.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800;900&display=swap" rel="stylesheet">
 		<meta charset="utf-8">
 	</head>
 	<header>
